--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Flexible Wear — Versatile Apparel for Schools, Corporates & You</title>
     <meta name="description"
         content="Flexible Wear — modern, versatile cardigans, joggers, hoodies and sportswear for schools, corporations and individuals. Fast, accessible and responsive site." />
-
+    
+    <meta property="og:title" content="Flexible Wear — Versatile Apparel for Schools, Corporates & You" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://flexiblewears.sgm.ng" />
+    <meta property="og:image" content="https://flexiblewears.sgm.ng/ogimage.png" />
     <!-- Performance hints -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
